# core-data-covid-project

./: .gitmodules  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: okteto_deploy.yml
app/src/: types.py
app/src/pages/: __init__.py  general_data.py
assets/mock_data/: global_cases.json
assets/topojson/: canadaprovtopo.json  spain-comunidad-with-canary-islands.json
backend/: .env.example  API.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
backend/covid-backend/: __init__.py  auth.py  cases.py  config.py  countries.py  db.py  email.py  errors.py  logger.py  provinces.py  types.py  utils.py
dashboard/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
dashboard/app/: main.py
dashboard/app/src/: config.py  data.py
dashboard/app/src/pages/: __init__.py  amend_data.py  country_data.py  general_data.py
data-loader/: README.md
data-loader/covid_data/: types.py
data-loader/covid_data/commands/: load_csv.py  scrap_country.py
data-loader/covid_data/db/: __init__.py  queries.py
data-loader/covid_data/scrappers/: france.py  spain.py
postgres/: Dockerfile
