[tool.poetry]
name = "covid-data-backend"
version = "0.1.0"
description = "Backend part of the mid-project for the Data Science bootcamp from Core Code School"
authors = ["Ale Sanchez <alesanchezmedina@gmail.com>"]
license = "The Unlicense"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
python-dotenv = "^0.19.0"
psycopg2 = "^2.9.1"
requests = "^2.26.0"
gunicorn = "^20.1.0"
covid-data = "^0.1.18"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
isort = "^5.9.3"
pylint = "^2.9.6"
flake8 = "^3.9.2"
bandit = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
